2008-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Report failure if dumper succeed and
				  chunker failed.

2008-02-07  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS, ReleaseNotes: Add notes about rsh/ssh and amandad_path.

2008-02-07  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.6.0b2 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, "2.6.0b2")
	* packaging/rpm/amanda.spec: %define amanda_version 2.6.0b2
	* packaging/rpm/buildpkg: AMVER=amanda-2.6.0b2

2008-02-07  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/amrecover.c: Use tapedev from server if it is not set
	                           in amanda.client.conf
	* example/amanda-client.conf.in: Document it.

2008-02-07  Jean-Louis Martineau <martineau@zmanda.com>
        * device-src/tape-device.c (tape_device_init): Init min_block_size
          and fixed_block_size to 32768.

2008-02-07  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-posix.c (tape_is_ready): Don't use GMT_ONLINE.

2008-02-07  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amcheckdump.8.xml: add -o option
	* man/Makefile.am: build amcheckdump manpage
	* server-src/amdevcheck.pl: tweak @ARGV parsing
	* server-src/amcheckdump.pl installcheck/Installcheck/Run.pm
	  installcheck/amcheckdump.pl: significant rewrite to catch more errors
	  and not loop for ever on some errors.

2008-02-01  Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: added amdumpcheck.8.gz to the %files list
	  for both client and server, removed amplot from client, added missing
	  directory %{SYSCONFDIR}/amanda

2008-01-29  Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: changed %{SYSCONFDIR} to %{LOCALSTATEDIR}
	  where amanda/amandates is concerned.  also added %{LOCALSTATEDIR} to
	  the %files list.

2008-01-29  Dan Locks <dwlocks@zmanda.com>
	* man/xml-src/*: added wiki.zmanda.com to "see also" section of all
	  man pages.
